--- a/Markdown_Book_Guide/Markdown_Book_Guide.html
+++ b/Markdown_Book_Guide/Markdown_Book_Guide.html
@@ -170,6 +170,7 @@
                 <div id="content" class="content">
                     <main><div class="sidetoc"><nav class="pagetoc"></nav></div>
                         <h1 id="documentation"><a class="header" href="#documentation">Documentation</a></h1>
+<p>{../SUMMARY.md startline=5 endline=12 highlight=[6,10]}</p>
 <div id="admonition-note" class="admonition admonish-note" role="note" aria-labelledby="admonition-note-title">
 <div class="admonition-title">
 <div id="admonition-note-title">
@@ -211,7 +212,7 @@
 <a class="admonition-anchor-link" href="#admonition-terminal"></a>
 </div>
 <div>
-<pre><code class="language-sh">git config --global user.name "YourGitHubUserName"
+<pre><code class="language-sh linenumber=false">git config --global user.name "YourGitHubUserName"
 </code></pre>
 </div>
 </div>
@@ -334,12 +335,10 @@ ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIBJf5t9RcKdkZwlxS14EZn91hDQndAjMIDz+c92kFtfC
 </div>
 <p>The copy the output from <code>ssh-ed25519 ... YourGitEmail</code> and follow the screenshots below.</p>
 <div align=center>
-<ol>
-<li><img src="./figures/step6-4.png" alt="" /></li>
-<li><img src="./figures/step6-5.png" alt="" /></li>
-<li><img src="./figures/step6-6.png" alt="" /></li>
-<li><img src="./figures/step6-7.png" alt="" /></li>
-</ol>
+<p><img src="./figures/step6-4.png" alt="" /></p>
+<p><img src="./figures/step6-5.png" alt="" /></p>
+<p><img src="./figures/step6-6.png" alt="" /></p>
+<p><img src="./figures/step6-7.png" alt="" /></p>
 </div>
 <p>Once completed, go back to the terminal and lets check for a connection:</p>
 <div id="admonition-terminal-4" class="admonition admonish-terminal" role="note" aria-labelledby="admonition-terminal-4-title">
@@ -494,6 +493,7 @@ Connection to github.com closed.
 
         <!-- Custom JS scripts -->
         <script src=".././theme/pagetoc.js"></script>
+        <script src=".././theme/highlightjs-line-numbers.js"></script>
 
 
     </div>
