--- a/Markdown_Doc/Alerts_Directives.html
+++ b/Markdown_Doc/Alerts_Directives.html
@@ -324,11 +324,9 @@
 <a class="admonition-anchor-link" href="#admonition-code"></a>
 </div>
 <div>
-<pre><code class="language-c">
-int sum (int a, int b){
+<pre><code class="language-c">int sum (int a, int b){
     return a + b;
 }
-
 </code></pre>
 </div>
 </div>
@@ -406,6 +404,7 @@ int sum (int a, int b){
 
         <!-- Custom JS scripts -->
         <script src=".././theme/pagetoc.js"></script>
+        <script src=".././theme/highlightjs-line-numbers.js"></script>
 
 
     </div>
