--- a/Markdown_Doc/Markdown_Doc.html
+++ b/Markdown_Doc/Markdown_Doc.html
@@ -450,6 +450,7 @@ Figure 2: Center content
 
         <!-- Custom JS scripts -->
         <script src=".././theme/pagetoc.js"></script>
+        <script src=".././theme/highlightjs-line-numbers.js"></script>
 
 
     </div>
