--- a/Markdown_Doc/Alerts.html
+++ b/Markdown_Doc/Alerts.html
@@ -175,11 +175,19 @@
 <pre><code>~~~admonish info
 A beautifully styled message.
 ~~~
-
 </code></pre>
 <p>into this:</p>
-<pre><code class="language-info">A beautifully styled message.
-</code></pre>
+<div id="admonition-info" class="admonition admonish-info" role="note" aria-labelledby="admonition-info-title">
+<div class="admonition-title">
+<div id="admonition-info-title">
+<p>Info</p>
+</div>
+<a class="admonition-anchor-link" href="#admonition-info"></a>
+</div>
+<div>
+<p>A beautifully styled message.</p>
+</div>
+</div>
 <h2 id="usage"><a class="header" href="#usage">Usage</a></h2>
 <h3 id="a-basic-admonish-block"><a class="header" href="#a-basic-admonish-block">A basic <code>admonish</code> block</a></h3>
 <p>Use any <a href="https://spec.commonmark.org/0.30/#fenced-code-blocks">fenced code-block</a> as you normally would, but annotate it with <code>admonish &lt;admonition type&gt;</code>:</p>
@@ -394,8 +402,7 @@ Remember, this operation costs money!
 <a class="admonition-anchor-link" href="#admonition-expensive"></a>
 </div>
 <div>
-<pre><code>Remember, this operation costs money!
-</code></pre>
+<p>Remember, this operation costs money!</p>
 </div>
 </div>
 <style>.scroll-to-top { font-size: 2.5rem; width: 3.2rem; height: 3.2rem; display: none; align-items: center; justify-content: center; position: fixed; padding: 0.75rem; bottom: 4rem; right: calc(1.25rem + 90px + var(--page-padding)); z-index: 999; cursor: pointer; border: none; color: var(--bg); background: var(--fg); border-radius: 50%; } .scroll-to-top.hidden { display: none; } .scroll-to-top i { transform: translateY(-2px); } @media (min-width: 1080px) { .scroll-to-top { display: flex; } }</style><button type="button" aria-label="scroll-to-top" class="scroll-to-top hidden" onclick="scrollToTop()"> <i class="fa fa-angle-up"></i></button><script>const scrollToTop = () => window.scroll({ top: 0, behavior: "smooth" }); window.addEventListener("scroll", () => { const button = document.querySelector(".scroll-to-top"); button.classList.toggle("hidden", window.scrollY <200); });</script><style>footer { text-align: center; text-wrap: balance; margin-top: 5rem; display: flex; flex-direction: column; justify-content: center; align-items: center; } footer p { margin: 0; }</style><footer><p>Copyright © 2025 • Created with ❤️ by <a href="https://github.com/CompEng0001">CompEng0001</a></p></footer>
@@ -445,6 +452,7 @@ Remember, this operation costs money!
 
         <!-- Custom JS scripts -->
         <script src=".././theme/pagetoc.js"></script>
+        <script src=".././theme/highlightjs-line-numbers.js"></script>
 
 
     </div>
