--- a/Markdown_Book_Guide/Markdown_Book_Guide.html
+++ b/Markdown_Book_Guide/Markdown_Book_Guide.html
@@ -130,19 +130,24 @@
                             <i class="fa fa-paint-brush"></i>
                         </button>
                         <ul id="theme-list" class="theme-popup" aria-label="Themes" role="menu">
+                            <li role="none" align=center class="theme-group"><strong>Light Themes</strong></li>
+                            <li role="none"><button role="menuitem" class="theme" id="dayfox">Dayfox</button></li>
+                            <li role="none"><button role="menuitem" class="theme" id="noctis-lux">Noctis Lux</button></li>
+                            <li role="none"><button role="menuitem" class="theme" id="rust">Rust</button></li>
+                            <li role="none"><button role="menuitem" class="theme" id="zenbones">Zenbones</button></li>
+                            <li role="none" align=center class="theme-group"><strong>Dark Themes</strong></li>
                             <li role="none"><button role="menuitem" class="theme" id="default_theme">Auto</button></li>
-                            <li role="none"><button role="menuitem" class="theme" id="ayu">Ayu</button></li>
+                            <li role="none"><button role="menuitem" class="theme" id="brew">Brew</button></li>
                             <li role="none"><button role="menuitem" class="theme" id="coal">Coal</button></li>
                             <li role="none"><button role="menuitem" class="theme" id="dracula">Dracula</button></li>
-                            <li role="none"><button role="menuitem" class="theme" id="frappe">Frappé</button></li>
-                            <li role="none"><button role="menuitem" class="theme" id="kanagawa">Knagawa</button></li>
-                            <li role="none"><button role="menuitem" class="theme" id="macchiato">Macchiato</button></li>
-                            <li role="none"><button role="menuitem" class="theme" id="mocha">Mocha</button></li>
+                            <li role="none"><button role="menuitem" class="theme" id="everforest">Everforest</button></li>
+                            <li role="none"><button role="menuitem" class="theme" id="kanagawa">Kanagawa</button></li>
+                            <li role="none"><button role="menuitem" class="theme" id="miasma">Miasma</button></li>
                             <li role="none"><button role="menuitem" class="theme" id="navy">Navy</button></li>
+                            <li role="none"><button role="menuitem" class="theme" id="nord">Nord</button></li>
                             <li role="none"><button role="menuitem" class="theme" id="pinkrose">Pinkrose</button></li>
-                            <li role="none"><button role="menuitem" class="theme" id="rust">Rust</button></li>
+
                             <li role="none"><button role="menuitem" class="theme" id="tender">Tender</button></li>
-                            <li role="none"><button role="menuitem" class="theme" id="tokyonight">Tokyonight</button></li>
                         </ul>
                         <button id="search-toggle" class="icon-button" type="button" title="Search (`/`)" aria-label="Toggle Searchbar" aria-expanded="false" aria-keyshortcuts="/ s" aria-controls="searchbar">
                             <i class="fa fa-search"></i>
@@ -190,7 +195,6 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="documentation"><a class="header" href="#documentation">Documentation</a></h1>
-<p>{../SUMMARY.md startline=5 endline=12 highlight=[6,10]}</p>
 <div id="admonition-note" class="admonition admonish-note" role="note" aria-labelledby="admonition-note-title">
 <div class="admonition-title">
 <div id="admonition-note-title">
@@ -210,7 +214,13 @@
 </div>
 </div>
 <p>This template can used to create a place for all exercises or source of knowledge for your module, which is deployed as a webpage with the following address:</p>
-<p><code>https://uniofgreenwich.github.io/Name_of_your_Repository</code>, best practice is to prefix with the module code.</p>
+<ul>
+<li>Best practice is to prefix with the module code
+<ul>
+<li><code>https://uniofgreenwich.github.io/Name_of_your_Repository</code></li>
+</ul>
+</li>
+</ul>
 <p>Examples:</p>
 <ul>
 <li>
@@ -467,7 +477,7 @@ Connection to github.com closed.
 </li>
 </ul>
 <style>.scroll-to-top { font-size: 2.5rem; width: 3.2rem; height: 3.2rem; display: none; align-items: center; justify-content: center; position: fixed; padding: 0.75rem; bottom: 4rem; right: calc(1.25rem + 90px + var(--page-padding)); z-index: 999; cursor: pointer; border: none; color: var(--bg); background: var(--fg); border-radius: 50%; } .scroll-to-top.hidden { display: none; } .scroll-to-top i { transform: translateY(-2px); } @media (min-width: 1080px) { .scroll-to-top { display: flex; } }</style><button type="button" aria-label="scroll-to-top" class="scroll-to-top hidden" onclick="scrollToTop()"> <i class="fa fa-angle-up"></i></button><script>const scrollToTop = () => window.scroll({ top: 0, behavior: "smooth" }); window.addEventListener("scroll", () => { const button = document.querySelector(".scroll-to-top"); button.classList.toggle("hidden", window.scrollY <200); });</script><style>footer { text-align: center; text-wrap: balance; margin-top: 5rem; display: flex; flex-direction: column; justify-content: center; align-items: center; } footer p { margin: 0; }</style><footer><p>Copyright © 2025 • Created with ❤️ by <a href="https://github.com/CompEng0001">CompEng0001</a></p></footer>
-<footer><span class="gitinfo-footer" style="font-size:0.8em;padding:4px;margin:0.5em 0;text-align:right;display:block;">Page last updated: Thursday 03 July 2025 @ 13:42:52 | Commit: c8cf851</span></footer>
+<footer><span class="gitinfo-footer" style="font-size:0.8em;padding:4px;margin:0.5em 0;text-align:right;display:block;">Page last updated: Monday 14 July 2025 @ 16:11:55 | Commit: f950324</span></footer>
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
